src/tests/errors/duplicate_param/source.z42
int Add(int x, int x) {   // duplicate parameter name — should be a compile error
    return x;
}

void Main() {}
